fix: vote progress vertical alignment

--- a/react/src/components/VoteProgress/index.module.less
+++ b/react/src/components/VoteProgress/index.module.less
@@ -3,8 +3,16 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  gap: 4px;
 
   :global(.ant-statistic-title) {
     color: rgba(0, 0, 0, 0.45);
   }
+}
+
+.progress {
+  padding-top: 8px;
+  flex: 1;
+  display: flex;
+  align-items: center;
 }
